# openeuler-epkg

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README.zh.md  build.rs  channel.json  download-chunks.md  downloader.sh  epkg-installer.sh  epkg-rootfs.sh  epkg-uninstaller.sh  epkg-usage.md  epkg.spec  release_notes
assets/homebrew/: epkg_formula_stub.rb  formula_stub.rb  postinstall_runner.rb
assets/mirrors/: mirrors.json
assets/repos/: alpine.yaml  archlinux-cn.yaml  brew.yaml  cachyos.yaml  conda-forge.yaml  debian-mariadb.yaml  debian-multimedia.yaml  debian-mysql.yaml  debian-postgresql.yaml  debian-ros2.yaml  debian-termux.yaml  debian.yaml  debian_elts.yaml  deepin.yaml  endeavouros.yaml  fedora-mariadb.yaml  fedora-mysql.yaml  linuxmint.yaml  msys2.yaml  openeuler.yaml  opensuse.yaml  ubuntu.yaml
assets/shell/: epkg.ps1
build-system/: autogen.sh  autogen.yaml  autotools.sh  cmake.sh  cmake.yaml  generic-build.sh  go.sh  go.yaml  make.sh  meson.sh  meson.yaml  phase.sh  python.sh  ruby.sh
build-system/builder/: make.yaml  meson.sh
build-system/scripts/: parse_yaml.py  phase.sh
build-system/test/: redis.yaml  tree.yaml
channel/: almalinux.yaml  alpine.yaml  anaconda.yaml  archlinux-arch4edu.yaml  archlinux-chaotic-aur.yaml  archlinux-cn.yaml  archlinux.yaml  armbian.yaml  artixlinux.yaml  cachyos.yaml  cc-timezone.txt  centos-cloud.yaml  centos.yaml  conda-forge.yaml  conda.yaml  debian-ceph.yaml  debian-elts.yaml  debian-mongodb.yaml  debian-postgresql.yaml  debian.yaml  debian_elts.yaml  deepin.yaml  distros.yaml  endeavouros.yaml  fedora-postgresql.yaml  fedora-rpmfusion.yaml  fedora.yaml  linuxmint.yaml  manjaro.yaml  mirrors.json  mirrors.yaml  mxlinux.yaml  openEuler-20.03-LTS-SP4-channel.toml  openEuler-20.03-LTS-SP4-channel.yaml  openEuler-22.03-LTS-SP4-channel.toml  openEuler-22.03-LTS-SP4-channel.yaml  openEuler-24.03-LTS-channel.toml  openEuler-24.03-LTS-channel.yaml  openEuler-24.09-channel.toml  openEuler-24.09-channel.yaml  (+12 more)
create_repo/: create_index.py  create_repo.py  file_utils.py  requirements.txt
doc/: epkg-format.md  epkg-usage.md
doc/design-notes/: build-system.md  download-chunks.md  environment.md  epkg-build.md  epkg-layout.md  epkg-list.md  epkg-manager-install-mode.md  epkg-manager-usecase.md  epkg-package.md  epkg-suid.md  repodata.md  reuse-hostos-packages.md
doc/x2epkg/: deb_fields.csv  post-install-scriptlets.md  rpm_fields.csv
docs/: PERFORMANCE_ANALYSIS.md  epkg-format.md
docs/design-notes/: download-integrity.md  download-timeskew.md  environment.md  epkg-distro.md  epkg-layers.md  epkg-layout.md  epkg-list.md  epkg-package.md  epkg-python-depend.md  epkg-suid.md  normal-user-install.md  package-unpacking.md  repodata.md  sandbox-vmm.md  tool-mirror-acceleration.md
docs/en/: index.md
docs/x2epkg/: apt-dnf-references.md  desktop-integration.md
docs/zh/: index.md
epkg-hash/: Cargo.toml
epkg-hash/src/: main.rs
lib/: env.sh  epkg-rc.sh  init.sh  musl_compat.c  package.sh  paths.sh
lib/epkg/: cache-repo.sh  env.sh  epkg-rc.sh  hash.sh  init-repo-conf.sh  init.sh  package.sh  paths.sh  query.sh  repo.sh
lib/info/: main.sh  metadata.sh
rpm2epkg/: Dockerfile  batch-convert-rpm2epkg  batch-run-convert  build  convert-rpm2epkg  epkg_rpm_build  gen-package.sh  gen-runtimePhase.sh
rpm2epkg/rpm2epkg-repos-list/: centos-9-stream-aarch64  centos-9-stream-x86_64  fedora-40-aarch64  fedora-40-x86_64  openEuler-20.03-LTS-SP4-aarch64  openEuler-20.03-LTS-SP4-x86_64  openEuler-22.03-LTS-SP3  openEuler-22.03-LTS-SP4-aarch64  openEuler-22.03-LTS-SP4-x86_64  openEuler-24.03-LTS-aarch64  openEuler-24.03-LTS-x86_64  openEuler-24.09  openEuler-24.09-aarch64  openEuler-24.09-x86_64  openEuler-demo
sbin/: epkg-rootfs.sh  epkg_rpm_build
scripts/: account-sh-commands.py  analyze_virtiofs.sh  benchmark.sh  benchmark_analyze.sh  benchmark_perf.sh  find-long-fns.py
scripts/mirror/: .gitignore  Makefile  README.md  blacklist-mirrors.txt  common.py  fetch_new_mirrors.py  fetch_official_mirrors.py  ls_mirrors.py  merge_mirrors.py  probe_dirs.py  requirements.txt  usage.md
sources/: almalinux.yaml  archlinux-arm.yaml  archlinux.yaml  armbian.yaml  artixlinux.yaml  centos.yaml  conda-forge.yaml  conda.yaml  debian-ceph.yaml  debian-kubernetes.yaml  debian-mongodb.yaml  debian-multimedia.yaml  debian-nginx.yaml  debian-postgresql.yaml  debian.yaml  endeavouros.yaml  epel.yaml  fedora-rpmfusion.yaml  fedora.yaml  linuxmint.yaml  manjaro.yaml  manual-mirrors.json  msys2.yaml  mxlinux.yaml  openeuler.yaml  opensuse.yaml  raspbian.yaml  rocky-ceph.yaml  rocky-epel.yaml  rocky-postgresql.yaml  rocky.yaml  ubuntu-cuda.yaml  ubuntu-ros2.yaml  ubuntu.yaml
src/: Makefile  apk_pkg.rs  apk_repo.rs  apparmor.rs  applets.rs  arch_pkg.rs  arch_repo.rs  aur.rs  auto_idmap.rs  brew_pkg.rs  brew_postinstall.rs  brew_repo.rs  brew_service.rs  conda_link.rs  conda_pkg.rs  conda_repo.rs  conda_requires.rs  deb_pkg.rs  deb_repo.rs  deb_sources.rs  deb_triggers.rs  deinit.rs  depends.rs  dirs.rs  download.rs  dpkg_db.rs  environment.rs  epkg-store.rs  epkg.rs  expose.rs  gc.rs  hash.py  hash.rs  history.rs  hooks.rs  idmap.rs  index_html.rs  info.rs  init.rs  install.rs  (+62 more)
src/applets/: addgroup.rs  adduser.rs  base64.rs  basename.rs  cat.rs  chgrp.rs  chmod.rs  chown.rs  comm.rs  cp.rs  cut.rs  deb_systemd_helper.rs  delgroup.rs  deluser.rs  df.rs  dirname.rs  dpkg.rs  dpkg_divert.rs  dpkg_maintscript_helper.rs  dpkg_query.rs  dpkg_statoverride.rs  dpkg_trigger.rs  echo.rs  env.rs  fgrep.rs  grep.rs  groupadd.rs  groupdel.rs  head.rs  hostid.rs  ifconfig.rs  init.rs  install.rs  kill.rs  killall.rs  link.rs  ln.rs  logname.rs  ls.rs  md5sum.rs  (+46 more)
src/busybox/: addgroup.rs  adduser.rs  chgrp.rs  chmod.rs  chown.rs  chroot.rs  cksum.rs  cp.rs  cut.rs  deb_systemd_helper.rs  delgroup.rs  deluser.rs  df.rs  dpkg.rs  dpkg_divert.rs  dpkg_maintscript_helper.rs  dpkg_query.rs  dpkg_realpath.rs  dpkg_statoverride.rs  dpkg_trigger.rs  (+51 more)
tests/: README.md  common.sh  debug_solve.sh  test_depends.py
x2epkg/: x2epkg.sh
(+443 files in other folders)
