[package]
name = "epkg"
description = "epkg package manager"
version = "0.1.0"
edition = "2021"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
opt-level = "z"  # Optimize for size.
# codegen-units = 1
# strip = true
# panic = "abort"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ureq = { version = "2.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.3"
tar = "0.4"
zstd = "0.11"
sha2 = "0.10"
base32 = "0.5.1"
glob = "0.3.2"
anyhow = "1.0"
dirs = "5.0"
indicatif = "0.17"
nix = { version = "0.29", features = ["process", "user", "fs"] }
rand = "0.8"
users = "0.11"
crossbeam-channel = "0.5"
rayon = "1.8"

# https://docs.rs/crate/idna_adapter/latest
# to make the idna crate not actually support IDNA, run cargo update -p idna_adapter --precise 1.0.0
idna_adapter = "1.0.0"

# Optional but recommended for better progress bars
[dependencies.console]
version = "0.15"

[dependencies.url]
version = "2.5.4"
default-features = false
features = []  # Disable the `idna` feature
