[package]
name = "epkg"
description = "epkg package manager"
version = "0.1.0"
edition = "2021"

# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
opt-level = "z"  # Optimize for size.
# codegen-units = 1
# strip = true
# panic = "abort"

[dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc"] }
quick-xml = { version = "0.37", default-features = false }
xz2 = { version = "0.1", default-features = false }
clap = { version = "4.5", features = ["std", "help"], default-features = false }
ureq = { version = "3.0", features = ["rustls"], default-features = false }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", features = ["std"], default-features = false }
serde_yaml = { version = "0.9", default-features = false }
walkdir = { version = "2.5", default-features = false }
tar = { version = "0.4", default-features = false }
zstd = { version = "0.13", default-features = false }
flate2 = { version = "1.1", features = ["rust_backend"], default-features = false }
sha2 = { version = "0.10", default-features = false }
base32 = { version = "0.5.1", default-features = false }
glob = { version = "0.3", default-features = false }
dirs = { version = "6.0", default-features = false }
indicatif = { version = "0.17", default-features = false }
nix = { version = "0.30", features = ["process", "user", "fs", "signal"], default-features = false }
rand = { version = "0.8", features = ["std", "std_rng", "getrandom"], default-features = false }
users = { version = "0.11", default-features = false }
crossbeam-channel = { version = "0.5", features = ["std"], default-features = false }
rayon = { version = "1.10", default-features = false }
pathdiff = { version = "0.2.3", default-features = false }
lazy_static = { version = "1.5", default-features = false }
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing"] }
regex = { version = "1.11.1", features = ["std", "unicode-perl"], default-features = false }
uuid = { version = "1.16", features = ["v4"], default-features = false }
log = { version = "0.4", default-features = false }
env_logger = { version = "0.11.8", default-features = false }
color-eyre = { version = "0.6" }
# color-eyre = { version = "0.6", features = ["capture-spantrace"], default-features = false }
filetime = "0.2"
ctrlc = "3.4"      # For handling Ctrl-C cleanly
memmap2 = "0.9"

# Optional but recommended for better progress bars
[dependencies.console]
version = "0.15"

# AR archive support for Debian packages
[dependencies.ar]
version = "0.9"
default-features = false

# RPM package support
[dependencies.rpm]
version = "0.16"
default-features = false
features = ["zstd-compression", "xz-compression"]

# https://docs.rs/color-eyre/latest/color_eyre/#improving-perf-on-debug-builds
[profile.dev.package.backtrace]
opt-level = 3
